# tic-tac-toe

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/: agent.py  mcp_server.py  vector_store.py
src/mcp_agent.egg-info/: PKG-INFO  requires.txt
